Tuneup gabbi resource_type.yaml file to modern standards
Make use of METHOD: /url shorthand to make the request method more
visible and more tightly associated with the url for easier reading.

Use $LAST_URL to refer to the URL of the previous request, but only
when the sameness of the URL is a relevant part of the expression of
the tests-in-sequence. (That is, don't just use LAST_URL because the
URL is the same.)

Change-Id: Id07781b370d269a6c88958f8f6611e642ea357fc

--- a/gnocchi/tests/gabbi/gabbits/resource-type.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource-type.yaml
@@ -10,15 +10,14 @@ tests:
 
     - name: list resource type
       desc: only legacy resource types are present
-      url: /v1/resource_type
+      GET: /v1/resource_type
       response_json_paths:
           $.`len`: 15
 
 # Some bad cases
 
     - name: post resource type as non-admin
-      url: /v1/resource_type
-      method: post
+      POST: $LAST_URL
       data:
           name: my_custom_resource
       request_headers:
@@ -39,8 +38,7 @@ tests:
       status: 400
 
     - name: post resource type bad string
-      url: /v1/resource_type
-      method: post
+      POST: $LAST_URL
       request_headers:
           x-roles: admin
           content-type: application/json
@@ -63,8 +61,7 @@ tests:
 # Create a type
 
     - name: post resource type
-      url: /v1/resource_type
-      method: post
+      POST: $LAST_URL
       request_headers:
           x-roles: admin
           content-type: application/json
@@ -131,13 +128,13 @@ tests:
 
     - name: relist resource types
       desc: we have a resource type now
-      url: /v1/resource_type
+      GET: $LAST_URL
       response_json_paths:
           $.`len`: 16
           $.[11].name: my_custom_resource
 
     - name: get the custom resource type
-      url: /v1/resource_type/my_custom_resource
+      GET: /v1/resource_type/my_custom_resource
       response_json_paths:
           $.name: my_custom_resource
           $.attributes:
@@ -171,15 +168,13 @@ tests:
 # Some bad case case on the type
 
     - name: delete as non-admin
-      url: /v1/resource_type/my_custom_resource
-      method: DELETE
+      DELETE: $LAST_URL
       status: 403
 
 # Bad resources for this type
 
     - name: post invalid resource
-      url: /v1/resource/my_custom_resource
-      method: post
+      POST: /v1/resource/my_custom_resource
       request_headers:
           x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
@@ -196,8 +191,7 @@ tests:
           - "'name']"
 
     - name: post invalid resource uuid
-      url: /v1/resource/my_custom_resource
-      method: post
+      POST: $LAST_URL
       request_headers:
           x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
@@ -216,8 +210,7 @@ tests:
 # Good resources for this type
 
     - name: post custom resource
-      url: /v1/resource/my_custom_resource
-      method: post
+      POST: $LAST_URL
       request_headers:
           x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
@@ -235,8 +228,7 @@ tests:
           $.foobar: what
 
     - name: patch custom resource
-      url: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
-      method: patch
+      PATCH: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
       request_headers:
           x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
@@ -252,7 +244,7 @@ tests:
           $.int: 1
 
     - name: get resource
-      url: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
+      GET: $LAST_URL
       request_headers:
           content-type: application/json
       response_json_paths:
@@ -263,8 +255,7 @@ tests:
           $.int: 1
 
     - name: post resource with default
-      url: /v1/resource/my_custom_resource
-      method: post
+      POST: /v1/resource/my_custom_resource
       request_headers:
           x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
@@ -284,7 +275,7 @@ tests:
 # Ensure we can't delete the type
 
     - name: list resource history
-      url: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747/history?sort=revision_end:asc-nullslast
+      GET: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747/history?sort=revision_end:asc-nullslast
       request_headers:
           content-type: application/json
       response_json_paths:
@@ -297,8 +288,7 @@ tests:
           $[1].foobar: what
 
     - name: delete in use resource_type
-      url: /v1/resource_type/my_custom_resource
-      method: delete
+      DELETE: /v1/resource_type/my_custom_resource
       request_headers:
         x-roles: admin
       status: 400
@@ -308,38 +298,33 @@ tests:
 # Delete associated resources
 
     - name: delete the resource
-      url: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
+      DELETE: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
       request_headers:
         x-roles: admin
-      method: DELETE
       status: 204
 
     - name: delete the second resource
-      url: /v1/resource/my_custom_resource/c4110aec-6e5c-43fa-b8c5-ffdfbca3ce59
+      DELETE: /v1/resource/my_custom_resource/c4110aec-6e5c-43fa-b8c5-ffdfbca3ce59
       request_headers:
         x-roles: admin
-      method: DELETE
       status: 204
 
 # Now we can deleted the type
 
     - name: delete the custom resource type
-      method: delete
+      DELETE: /v1/resource_type/my_custom_resource
       request_headers:
         x-roles: admin
-      url: /v1/resource_type/my_custom_resource
       status: 204
 
     - name: delete non-existing custom resource type
-      method: delete
+      DELETE: $LAST_URL
       request_headers:
         x-roles: admin
-      url: /v1/resource_type/my_custom_resource
       status: 404
 
     - name: delete missing custom resource type utf8
-      url: /v1/resource_type/%E2%9C%94%C3%A9%C3%B1%E2%98%83
-      method: DELETE
+      DELETE: /v1/resource_type/%E2%9C%94%C3%A9%C3%B1%E2%98%83
       request_headers:
         x-roles: admin
       status: 404
@@ -349,8 +334,7 @@ tests:
 # Can we readd and delete the same resource type again
 
     - name: post resource type again
-      url: /v1/resource_type
-      method: post
+      POST: /v1/resource_type
       request_headers:
           x-roles: admin
           content-type: application/json
@@ -359,8 +343,7 @@ tests:
       status: 201
 
     - name: delete the custom resource type again
-      method: delete
+      DELETE: /v1/resource_type/my_custom_resource
       request_headers:
         x-roles: admin
-      url: /v1/resource_type/my_custom_resource
       status: 204
