Tuneup gabbi search.yaml file to modern standards
Make use of METHOD: /url shorthand to make the request method more
visible and more tightly associated with the url for easier reading.

Change-Id: Iec90797f1a6dbe427f534808378d86a1f185051f

--- a/gnocchi/tests/gabbi/gabbits/search.yaml
+++ b/gnocchi/tests/gabbi/gabbits/search.yaml
@@ -8,16 +8,15 @@ fixtures:
 
 tests:
     - name: typo of search
-      url: /v1/search/notexists
+      GET: /v1/search/notexists
       status: 404
 
     - name: typo of search in resource
-      url: /v1/search/resource/foobar
+      GET: /v1/search/resource/foobar
       status: 404
 
     - name: search with invalid uuid
-      url: /v1/search/resource/generic
-      method: POST
+      POST: /v1/search/resource/generic
       request_headers:
         content-type: application/json
       data:
