--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
     Topic :: System :: Monitoring
 
 [extras]
