rest: enable CORS middleware without Paste
It's impossible to pass a ConfigObj via Paste, so let's just embed it in
our application directly.

Change-Id: Iac4bc42102b02e996159e65df223ae09a2ca10d5

--- a/etc/gnocchi/api-paste.ini
+++ b/etc/gnocchi/api-paste.ini
@@ -13,10 +13,10 @@ use = egg:Paste#urlmap
 /v1 = gnocchiv1+auth
 
 [pipeline:gnocchiv1+noauth]
-pipeline = cors gnocchiv1
+pipeline = gnocchiv1
 
 [pipeline:gnocchiv1+auth]
-pipeline = cors keystone_authtoken gnocchiv1
+pipeline = keystone_authtoken gnocchiv1
 
 [app:gnocchiversions]
 paste.app_factory = gnocchi.rest.app:app_factory
@@ -28,8 +28,4 @@ root = gnocchi.rest.V1Controller
 
 [filter:keystone_authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
-oslo_config_project = gnocchi
-
-[filter:cors]
-paste.filter_factory = oslo_middleware.cors:filter_factory
 oslo_config_project = gnocchi
