Add home-page in setup.cfg
Change-Id: I2bf6be21fa49455b757c09dac811cc096a2295d9

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
+home-page = http://gnocchi.xyz
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
