test: fix a random failure with metric listing
The test
`gabbi.suitemaker.test_gabbi_prefix_resource_request_metrics_from_one_of_the_instances.test_request'
can fail in random cases with:

  AssertionError: Unable to match $[0].resource_id as 85c44741-cc60-4033-804e-2d3098c7d2e9, got d13982cb-4cce-4f84-a96e-7581be1e599c

because there are 2 resources with disk.util metrics and the list is not
be ordered.

Change-Id: I233c83028cb7295d81b00b2181eb23b8ab96ce97

--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -567,7 +567,7 @@ tests:
           host: compute3
           display_name: myvm2
           metrics:
-              cpu.util:
+              disk.util:
                   archive_policy_name: medium
       status: 201
       response_json_paths:
