block oslo.db 4.13.2
it's broken.

Change-Id: I06989336f90ae74f38a23276eda4ed688b5a51bd
Partial-Bug: #1620848

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,13 @@ keystone =
     keystonemiddleware>=4.0.0
 mysql =
     pymysql
-    oslo.db>=4.8.0,!=4.13.1
+    oslo.db>=4.8.0,!=4.13.1,!=4.13.2
     sqlalchemy
     sqlalchemy-utils
     alembic>=0.7.6,!=0.8.1
 postgresql =
     psycopg2
-    oslo.db>=4.8.0,!=4.13.1
+    oslo.db>=4.8.0,!=4.13.1,!=4.13.2
     sqlalchemy
     sqlalchemy-utils
     alembic>=0.7.6,!=0.8.1
