--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ stevedore
 voluptuous
 werkzeug
 trollius; python_version < '3.4'
-retrying
+tenacity>=3.1.0  # Apache-2.0
 WebOb>=1.4.1
 Paste
 PasteDeploy
