Allow to pass search filter in the query string
This change moves some logic from gnocchiclient to server side.

That allow to use the gnocchiclient syntax for search query on server
side.

Full javascript application (like grafana) will take a big advantage of
this.

Also all applications that was to propose text free query style will all
have the same format instead of having each application reinventing a
"almost" identical thing.

Change-Id: Idb9f9fcaab7f14ef7d2c514455bbf0d3a04e200b

--- a/gnocchi/tests/gabbi/gabbits/search.yaml
+++ b/gnocchi/tests/gabbi/gabbits/search.yaml
@@ -56,3 +56,10 @@ tests:
             - df7e5e75-6a1d-4ff7-85cb-38eb9d75da7e
       response_json_paths:
         $.`len`: 2
+
+    - name: search in_ query string
+      POST: /v1/search/resource/generic?filter=id%20in%20%5Bfaef212f-0bf4-4030-a461-2186fef79be0%2C%20df7e5e75-6a1d-4ff7-85cb-38eb9d75da7e%5D
+      request_headers:
+        content-type: application/json
+      response_json_paths:
+        $.`len`: 2
