storage: increase default processing delays
The default processing delay are too aggressive for most common
deployment that do not need real time data. Increase these values a bit.

Change-Id: I44d0c098892be45c3faeb2da3c1242bdd1717cfa

--- a/gnocchi/tests/gabbi/gabbits-live/live.yaml
+++ b/gnocchi/tests/gabbi/gabbits-live/live.yaml
@@ -678,11 +678,11 @@ tests:
           content-type: application/json
       status: 400
 
-    - name: delete single archive policy cleanup.
+    - name: delete single archive policy cleanup
       url: /v1/archive_policy/gabbilive
       method: DELETE
       poll:
-          count: 60
+          count: 360
           delay: 1
       status: 204
 
