switch to stop validating batch individually
deserialize_and_validate takes up the majority of the POST time when
using batch interface. this is because it validates each point
individually so the larger the POST, the processing time increases
nearly linearly.

this changes it so we process it at as a batch

Closes-Bug: #1624537
Change-Id: I4f8b8559bfee0994fbc975856b592b13d00e57c8

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -145,6 +145,19 @@ tests:
       response_strings:
         - Timestamp must be after Epoch
 
+    - name: get valid metric id for bad timestamp
+      GET: /v1/metric
+      status: 200
+
+    - name: push measurements to metric with bad timestamp
+      POST: /v1/metric/$RESPONSE['$[0].id']/measures
+      request_headers:
+           content-type: application/json
+      data:
+          - timestamp: "1915-100-06T14:33:57"
+            value: 43.1
+      status: 400
+
     - name: get valid metric id again
       GET: /v1/metric
       status: 200
