tests: Cover resource-type modification
This change adds basic live tests for downstream
integration testing.

Change-Id: Ie2eb059ba699d342adf29888c66252642065d838

--- a/gnocchi/tests/gabbi/gabbits-live/live.yaml
+++ b/gnocchi/tests/gabbi/gabbits-live/live.yaml
@@ -498,6 +498,25 @@ tests:
       response_headers:
           location: $SCHEME://$NETLOC/v1/resource_type/myresource
 
+    - name: add an attribute
+      url: /v1/resource/myresource
+      request_headers:
+          content-type: application/json-patch+json
+      data:
+        - op: "add"
+          path: "/attributes/awesome-stuff"
+          value: {"type": "bool", "required": false}
+      status: 200
+
+    - name: remove an attribute
+      url: /v1/resource/myresource
+      request_headers:
+          content-type: application/json-patch+json
+      data:
+        - op: "remove"
+          path: "/attributes/awesome-stuff"
+      status: 200
+
     - name: myresource resource bad accept
       desc: Expect 406 on bad accept type
       request_headers:
