Add upgrade targets for Gnocchi 3.0
Change-Id: I77f2ee82d6b630dd24f5364dbe3207ca2f8b9be4

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,32 @@ commands =
     oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
     {toxinidir}/run-tests.sh {posargs}
 
+[testenv:py35-postgresql-file-upgrade-from-3.0]
+# We should always recreate since the script upgrade
+# Gnocchi we can't reuse the virtualenv
+envdir = upgrade
+recreate = True
+skip_install = True
+usedevelop = False
+setenv = GNOCCHI_VARIANT=test,postgresql,file
+deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
+  pifpaf>=0.13
+  gnocchiclient
+commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
+
+[testenv:py27-mysql-ceph-upgrade-from-3.0]
+# We should always recreate since the script upgrade
+# Gnocchi we can't reuse the virtualenv
+envdir = upgrade
+recreate = True
+skip_install = True
+usedevelop = False
+setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
+deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
+  gnocchiclient
+  pifpaf>=0.13
+commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
+
 [testenv:py35-postgresql-file-upgrade-from-2.2]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
