--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -157,11 +157,7 @@ tests:
           x-user-id: 0fbb231484614b1a80131fc22f6afc9c
           x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
           content-type: text/plain
-      data:
-          id: f93450f2-d8a5-4d67-9985-02511241e7d1
-          started_at: "2014-01-03T02:02:02.000000"
-          user_id: 0fbb231484614b1a80131fc22f6afc9c
-          project_id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+      data: '{"id": "f93450f2-d8a5-4d67-9985-02511241e7d1", "started_at": "2014-01-03T02:02:02.000000", "user_id": "0fbb231484614b1a80131fc22f6afc9c", "project_id": "f3d41b770cc14f0bb94a1d5be9c0e3ea"}'
       status: 415
 
 # Create a new instance resource, demonstrate that including no data
@@ -339,6 +335,7 @@ tests:
       request_headers:
           x-user-id: 0fbb231484614b1a80131fc22f6afc9c
           x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
       data:
           host: compute2
 
