--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
 minversion = 1.8
-envlist = py{35,27},py{35,27}-{postgresql,mysql}{,-file,-swift,-ceph},pep8,bashate,py35-postgresql-file-upgrade-from-2.2,py27-mysql-ceph-upgrade-from-2.2
+envlist = py{35,27},py{35,27}-{postgresql,mysql}{,-all,-file,-swift,-ceph},pep8,bashate,py35-postgresql-file-upgrade-from-2.2,py27-mysql-ceph-upgrade-from-2.2
 
 [testenv]
 usedevelop = True
 sitepackages = False
 passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_*
-deps = .[test]
-   postgresql: .[postgresql,swift,file,ceph,ceph_recommended_lib]
-   mysql: .[mysql,swift,file,ceph,ceph_recommended_lib]
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
     GNOCCHI_TEST_INDEXER_DRIVER=postgresql
@@ -19,6 +16,14 @@ setenv =
     ceph: GNOCCHI_TEST_STORAGE_DRIVERS=ceph
     postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
     mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
+
+    GNOCCHI_STORAGE_DEPS=file,swift,ceph,ceph_recommended_lib
+    ceph: GNOCCHI_STORAGE_DEPS=ceph,ceph_recommended_lib
+    swift: GNOCCHI_STORAGE_DEPS=swift
+    file: GNOCCHI_STORAGE_DEPS=file
+deps = .[test]
+   postgresql: .[postgresql,{env:GNOCCHI_STORAGE_DEPS}]
+   mysql: .[mysql,{env:GNOCCHI_STORAGE_DEPS}]
 commands =
     doc8 --ignore-path doc/source/rest.rst doc/source
     oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
