rest: fix Epoch timestamp parsing
The recent change in 83f02996556af62d085ecf5bfe240440914fee8f leverages
pandas to convert timestamps, but specifies unit as being nanoseconds.
That broke the use case where the timestamps are sent as float
representing the number of seconds after Epoch, which was supported.

Change-Id: Ic9df7357b7006d2f592232e793ac12136e950f2e

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -147,7 +147,8 @@ tests:
 
     - name: get valid metric id for bad timestamp
       GET: /v1/metric
-      status: 200
+      response_json_paths:
+          $[0].archive_policy.name: cookies
 
     - name: push measurements to metric with bad timestamp
       POST: /v1/metric/$RESPONSE['$[0].id']/measures
@@ -160,18 +161,46 @@ tests:
 
     - name: get valid metric id again
       GET: /v1/metric
-      status: 200
+
+    - name: push measurements to metric epoch format
+      POST: /v1/metric/$RESPONSE['$[0].id']/measures
+      request_headers:
+           content-type: application/json
+      data:
+          - timestamp: 1425652437.0
+            value: 43.1
+      status: 202
+
+    - name: get valid metric id again 2
+      GET: /v1/metric
 
     - name: push measurements to metric
       POST: /v1/metric/$RESPONSE['$[0].id']/measures
       request_headers:
            content-type: application/json
       data:
-          - timestamp: "2015-03-06T14:33:57"
-            value: 43.1
           - timestamp: "2015-03-06T14:34:12"
             value: 12
       status: 202
+
+    - name: get valid metric id again 3
+      GET: /v1/metric
+
+    - name: get measurements by start
+      GET: /v1/metric/$RESPONSE['$[0].id']/measures?refresh=true&start=2015-03-06T14:34
+      response_json_paths:
+        $:
+          - ["2015-03-06T14:34:12+00:00", 1.0, 12.0]
+
+    - name: get valid metric id again 4
+      GET: /v1/metric
+
+    - name: get measurements from metric
+      GET: /v1/metric/$RESPONSE['$[0].id']/measures?refresh=true
+      response_json_paths:
+        $:
+          - ["2015-03-06T14:33:57+00:00", 1.0, 43.1]
+          - ["2015-03-06T14:34:12+00:00", 1.0, 12.0]
 
     - name: create valid metric two
       POST: /v1/metric
@@ -225,26 +254,6 @@ tests:
           x-user-id: foo
           x-project-id: bar
       GET: /v1/metric
-
-    - name: get metric list
-      GET: /v1/metric
-      status: 200
-      response_json_paths:
-          $[0].archive_policy.name: cookies
-
-    - name: get measurements from metric
-      GET: /v1/metric/$RESPONSE['$[0].id']/measures
-      status: 200
-
-    - name: get metric list for start test
-      GET: /v1/metric
-      status: 200
-      response_json_paths:
-          $[0].archive_policy.name: cookies
-
-    - name: get measurements by start
-      GET: /v1/metric/$RESPONSE['$[0].id']/measures?start=2015-03-06T14:33:57
-      status: 200
 
     - name: get measures unknown metric
       GET: /v1/metric/fake/measures
