test: allow to pass OS_DEBUG
Change-Id: I916e94dff9b50c89406054e2934c1ab54b946a6f

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py{35,27},py{35,27}-{postgresql,mysql}{,-all,-file,-swift,-ceph,-s3},p
 [testenv]
 usedevelop = True
 sitepackages = False
-passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_* AWS_*
+passenv = LANG OS_DEBUG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_* AWS_*
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
     GNOCCHI_TEST_INDEXER_DRIVER=postgresql
