support consistent timestamps
supporting a single post with multiple timestamp formats slows down
performance and isn't very realistic. this patch assumes a single
format is used.

Change-Id: If180455a2edd43317ddfddf008bf1bb0f8aae3ee

--- a/gnocchi/tests/gabbi/gabbits/metric-timestamp-format.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric-timestamp-format.yaml
@@ -32,3 +32,24 @@ tests:
           - timestamp: "-5 minutes"
             value: 43.1
       status: 202
+
+    - name: create metric 2
+      POST: /v1/metric
+      request_headers:
+          content-type: application/json
+      data:
+          archive_policy_name: cookies
+      status: 201
+      response_json_paths:
+          $.archive_policy_name: cookies
+
+    - name: push measurements to metric with mixed timestamps
+      POST: /v1/metric/$RESPONSE['$.id']/measures
+      request_headers:
+           content-type: application/json
+      data:
+          - timestamp: 1478012832
+            value: 43.1
+          - timestamp: "-5 minutes"
+            value: 43.1
+      status: 400
