rest: empty search query in resource search
resource search should support empty query. Right now, if the query is
not passed at all the api returns all of the resources. but with empty
query, i.e. {}, it breaks.

Change-Id: I5f85bae0b710b67e6cbd0c3165666cf09c17e759

--- a/gnocchi/tests/gabbi/gabbits/search.yaml
+++ b/gnocchi/tests/gabbi/gabbits/search.yaml
@@ -63,3 +63,11 @@ tests:
         content-type: application/json
       response_json_paths:
         $.`len`: 2
+
+    - name: search empty query
+      POST: /v1/search/resource/generic
+      request_headers:
+        content-type: application/json
+      data: {}
+      response_json_paths:
+        $.`len`: 2
